fix for card centering on mobile

--- a/css/card.scss
+++ b/css/card.scss
@@ -5,7 +5,7 @@
     height: 100%;
     border: 1px #FFFFFF solid;
     @media (max-width: 480px) {
-        width: 320px;
+        width: 310px;
     }
     @media (min-width: 480px) {
         width: 450px;
